--- a/micro-admin-server/tsconfig.json
+++ b/micro-admin-server/tsconfig.json
@@ -10,6 +10,12 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+     "paths": {
+      "@/*": [
+        "*"
+      ]
+    },
+    "skipLibCheck": true,
     "incremental": true
   }
 }
