--- a/micro-admin-server/package.json
+++ b/micro-admin-server/package.json
@@ -25,16 +25,17 @@
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/microservices": "^7.6.4",
-    "@nestjs/mongoose": "^7.2.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/typeorm": "^7.1.5",
     "amqp-connection-manager": "^3.2.1",
     "amqplib": "^0.6.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "mongoose": "^5.11.9",
+    "mongodb": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
