--- a/micro-challenges/tsconfig.json
+++ b/micro-challenges/tsconfig.json
@@ -9,7 +9,13 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": [
+        "*"
+      ]
+    },
+    "skipLibCheck": true,
     "incremental": true
   }
 }
